# cmake_sample

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  main.cc
src/: CMakeLists.txt  lint_and_format.sh  main.cc  test_main.cc
src/test/: CMakeLists.txt
src/util/: CMakeLists.txt  MyClass.cc  MyClass.h
test/: CMakeLists.txt  main.cc
util/: CMakeLists.txt  MyClass.cc  MyClass.h
